feat(idp): 新增身份认证服务基础框架
- 初始化IDP服务端与客户端项目结构
- 实现用户登录、多因素认证、密码重置等核心流程
- 添加PostgreSQL模型定义与数据库迁移
- 配置Redis模块与基础RPC通信机制
- 集成前端React应用与路由系统
- 补充统一数据库种子脚本
- 更新工作区配置与CI排除规则

--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -9,6 +9,7 @@
     "db:status": "tsx src/cli/db-status.ts",
     "db:reset:dev": "tsx src/cli/db-reset-dev.ts",
     "db:seed:mongo": "tsx src/cli/db-seed-mongo.ts",
+    "db:seed": "tsx src/seed/index.ts",
     "reset": "tsx src/cli/db-reset-dev.ts",
     "db:init:mac": "bash scripts/init_mac.sh",
     "db:init:linux": "bash scripts/init_linux.sh",
