--- a/apps/idp/client/package.json
+++ b/apps/idp/client/package.json
@@ -10,34 +10,20 @@
     "format": "pnpm exec eslint . --fix && pnpm exec prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.18.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.23",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
-    "postcss": "^8.5.6",
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.13.0",
     "sass": "^1.97.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
     "vite": "^5.4.8",
     "zod": "^3.25.76"
