--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ REDIS_HOST=localhost
 # Redis端口号
 REDIS_PORT=6379
 # 是否启用Redis（true/false）
-REDIS_ENABLED=false
+REDIS_ENABLED=true
 # Redis数据库索引
 REDIS_DB=0
 # Redis密码（可选）
@@ -66,6 +66,16 @@ BACKEND_INTEGRATED_PORT=3100
 BACKEND_INTEGRATED_URL=http://localhost:3100
 # 前端后端（BFF）服务端口
 BFF_PORT=4000
+
+# OIDC / OAuth 配置（开发示例）
+# OIDC 私钥加密主密钥（开发占位，生产需安全注入）
+OIDC_KEK_SECRET=dev-kek-do-not-use
+# IDP 基础 URL（用于 issuer / discovery）
+IDP_BASE_URL=http://localhost:4001
+# 默认客户端 ID（BFF）
+OIDC_DEFAULT_CLIENT_ID=csisp-bff
+# 默认回调地址（数组 JSON 字符串）：开发环境包含 BFF 与 backoffice
+OIDC_DEFAULT_REDIRECT_URIS=["http://localhost:4000/api/bff/callback","http://localhost:3000/api/backoffice/callback"]
 
 # Docker PostgreSQL配置（仅用于容器化部署）
 # PostgreSQL根用户名
