feat: 实现短信验证码登录及会话管理功能
新增阿里云短信服务集成，支持发送和验证短信验证码
添加会话守卫及会话管理中间件，实现登录状态保持
重构登录流程，支持多因子认证和会话续期
完善前端页面交互，包括短信验证码发送倒计时和错误提示
更新依赖以支持新功能，包括阿里云SDK和cookie解析

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,14 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=replace-me
 # PostgreSQL数据库名称
 POSTGRES_DB=csisp
+
+# 短信发送配置（阿里云）
+SMS_SIGN_NAME=速通互联验证码
+SMS_TEMPLATE_CODE=100001
+SMS_SCHEME_NAME=CSISP
+
+# 阿里云凭据（用于 OpenAPI 调用）
+# 生产环境请通过安全渠道注入，勿提交真实值
+ALIBABA_CLOUD_ACCESS_KEY_ID=
+ALIBABA_CLOUD_ACCESS_KEY_SECRET=
+ALIBABA_CLOUD_SECURITY_TOKEN=
