--- a/apps/idp/server/package.json
+++ b/apps/idp/server/package.json
@@ -11,32 +11,39 @@
     "format": "pnpm exec eslint . --fix && pnpm exec prettier --write ."
   },
   "dependencies": {
+    "@csisp/idl": "workspace:*",
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
     "@nestjs/platform-express": "^10.4.0",
-    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/sequelize": "^10.0.0",
-    "@csisp/idl": "workspace:*",
+    "@nestjs/serve-static": "^4.0.0",
+    "@alicloud/dypnsapi20170525": "2.0.0",
+    "@alicloud/credentials": "^2.3.0",
+    "@alicloud/openapi-client": "^0.4.15",
+    "@alicloud/openapi-util": "^0.2.1",
+    "@alicloud/tea-util": "^1.4.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0",
-    "sequelize-typescript": "^2.1.6",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "pino": "^9.3.0",
+    "pino-pretty": "^11.2.2",
     "redis": "^4.6.13",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "pino": "^9.3.0",
-    "pino-pretty": "^11.2.2"
+    "sequelize": "^6.35.0",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@csisp/utils": "workspace:*",
     "@nestjs/cli": "^10.4.0",
-    "@types/node": "^20.19.25",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
-    "tsx": "^4.0.0",
+    "@types/node": "^20.19.25",
+    "kanel": "^3.0.0",
     "nodemon": "^3.0.0",
-    "kanel": "^3.0.0"
+    "tsx": "^4.0.0"
   }
 }
