feat(idp): 重构IDP服务端与客户端代码，引入类型安全与IDL集成
- 将@csisp/idl依赖从server移至idp项目的devDependencies
- 新增rpc.ts类型定义文件，规范JSON-RPC请求/响应结构
- 扩展tsconfig路径映射，支持@pgtype类型导入
- 重构数据库模型实现IDL生成的类型接口
- 更新thrift定义，使用枚举替代魔术字符串
- 实现严格的请求参数校验与类型转换
- 统一前后端的多因子认证类型与流程
- 增强OIDC服务的类型安全与错误处理
- 优化登录流程的状态机与错误提示

--- a/apps/idp/package.json
+++ b/apps/idp/package.json
@@ -13,5 +13,8 @@
     "start": "pnpm -F ./server start",
     "kanel": "pnpm -F ./server kanel",
     "format": "pnpm -r --filter ./server --filter ./client exec eslint . --fix && pnpm -r --filter ./server --filter ./client exec prettier --write ."
+  },
+  "devDependencies": {
+    "@csisp/idl": "workspace:*"
   }
 }
