feat(idp): 实现密码找回功能并重构RPC模块
- 新增密码找回流程，包括初始化、验证码发送与校验、密码重置
- 将RPC相关代码提取为独立模块，支持客户端fetch与服务端Nest集成
- 重构短信验证码校验逻辑，支持登录和密码找回双流程
- 添加路由常量集中管理，优化导航代码可读性
- 更新IDL文件定义密码找回相关接口和类型
- 增强会话管理，支持显示用户信息和退出登录功能
- 完善错误处理和类型安全，优化前端表单交互体验

--- a/infra/idl/package.json
+++ b/infra/idl/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "gen:ts": "tsx ./cli/index.ts gen --ts",
     "gen:js": "tsx ./cli/index.ts gen --js",
-    "idl:gen": "tsx ./cli/index.ts gen --ts --js",
+    "idl:gen": "tsx ./cli/index.ts gen --ts --js && tsc -p tsconfig.esm.json && tsx ./scripts/build-esm-index.ts",
     "idl:check": "tsx ./cli/index.ts check",
     "idl:diff": "tsx ./cli/index.ts diff",
     "build": "pnpm idl:gen"
@@ -21,17 +21,17 @@
   ],
   "exports": {
     "./backoffice": {
-      "import": "./dist/backoffice.js",
+      "import": "./dist/esm/backoffice.js",
       "require": "./dist/backoffice.js",
       "types": "./dist/backoffice.d.ts"
     },
     "./backend": {
-      "import": "./dist/backend.js",
+      "import": "./dist/esm/backend.js",
       "require": "./dist/backend.js",
       "types": "./dist/backend.d.ts"
     },
     "./idp": {
-      "import": "./dist/idp.js",
+      "import": "./dist/esm/idp.js",
       "require": "./dist/idp.js",
       "types": "./dist/idp.d.ts"
     },
@@ -60,12 +60,12 @@
   },
   "dependencies": {
     "@creditkarma/thrift-server-core": "^1.0.4",
-    "pino": "^9.3.1",
-    "@csisp/utils": "workspace:*"
+    "@csisp/utils": "workspace:*",
+    "pino": "^9.3.1"
   },
   "devDependencies": {
     "@creditkarma/thrift-typescript": "^3.7.6",
-    "tsx": "^4.19.2",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "tsx": "^4.19.2"
   }
 }
