--- a/apps/idp/server/package.json
+++ b/apps/idp/server/package.json
@@ -21,6 +21,7 @@
     "@alicloud/openapi-client": "^0.4.15",
     "@alicloud/openapi-util": "^0.2.1",
     "@alicloud/tea-util": "^1.4.11",
+    "@csisp/rpc": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
