--- a/apps/idp/client/package.json
+++ b/apps/idp/client/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
-    "@csisp/rpc": "workspace:*",
     "antd": "^5.18.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@csisp/utils": "workspace:*",
+    "@csisp/rpc": "workspace:*",
     "@hookform/resolvers": "^3.10.0",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.19",
