--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -11,6 +11,7 @@
     "db:seed:mongo": "tsx src/cli/db-seed-mongo.ts",
     "db:seed": "tsx src/seed/index.ts",
     "reset": "tsx src/cli/db-reset-dev.ts",
+    "db:check:schema": "tsx src/cli/db-check-schema.ts",
     "db:init:mac": "bash scripts/init_mac.sh",
     "db:init:linux": "bash scripts/init_linux.sh",
     "db:init:win": "scripts/init_windows.bat",
@@ -21,14 +22,15 @@
   },
   "dependencies": {
     "@csisp/utils": "workspace:*",
-    "mongodb": "^6.8.0",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.8.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0",
-    "umzug": "^3.8.0",
     "pino": "^9.3.2",
-    "pino-pretty": "^11.2.2"
+    "pino-pretty": "^11.2.2",
+    "sequelize": "^6.35.0",
+    "sequelize-typescript": "^2.1.6",
+    "umzug": "^3.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
