--- a/infra/database/tsconfig.json
+++ b/infra/database/tsconfig.json
@@ -6,7 +6,9 @@
     "moduleResolution": "Node",
     "outDir": "dist",
     "rootDir": "src",
-    "noEmit": false
+    "noEmit": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src"]
 }
