feat(utils): 添加标准化日志模块并统一各服务日志实现
重构各服务日志实现，将其统一到 utils 包的标准化日志模块中
更新相关依赖并添加环境变量配置示例
简化各服务的日志创建代码，移除重复实现

--- a/.env.example
+++ b/.env.example
@@ -95,3 +95,11 @@ SMS_SCHEME_NAME=CSISP
 ALIBABA_CLOUD_ACCESS_KEY_ID=
 ALIBABA_CLOUD_ACCESS_KEY_SECRET=
 ALIBABA_CLOUD_SECURITY_TOKEN=
+
+# 路由前缀
+# backend-integrated
+BACKEND_INTEGRATED_PREFIX=/api
+# backoffice
+BACKOFFICE_PREFIX=/api/backoffice
+# idp
+IDP_PREFIX=/api/idp
