--- a/apps/idp/package.json
+++ b/apps/idp/package.json
@@ -9,6 +9,8 @@
   ],
   "scripts": {
     "dev": "pnpm kanel && pnpm -r --filter ./client --filter ./server dev",
+    "dev:client": "pnpm -F ./client dev",
+    "dev:server": "pnpm -F ./server dev",
     "build": "pnpm -r --filter ./client build && pnpm -r --filter ./server build",
     "start": "pnpm -F ./server start",
     "kanel": "pnpm -F ./server kanel",
