feat: 实现OIDC集成与统一身份认证流程
refactor(rpc): 重构RPC核心模块与错误处理机制
feat(rpc): 新增Node.js服务端RPC支持
feat(idl): 增强IDL类型导出与ESM构建支持

feat(auth): 实现基于OIDC的统一登录流程
feat(backoffice): 集成IdP认证服务
feat(idp): 扩展OIDC授权请求详情接口

fix(database): 修复用户角色字段初始化问题
chore: 更新依赖项与配置文件

--- a/.env.example
+++ b/.env.example
@@ -71,11 +71,16 @@ BFF_PORT=4000
 # OIDC 私钥加密主密钥（开发占位，生产需安全注入）
 OIDC_KEK_SECRET=dev-kek-do-not-use
 # IDP 基础 URL（用于 issuer / discovery）
-IDP_BASE_URL=http://localhost:4001
+IDP_BASE_URL=http://localhost:4001/api/idp
 # 默认客户端 ID（BFF）
 OIDC_DEFAULT_CLIENT_ID=csisp-bff
 # 默认回调地址（数组 JSON 字符串）：开发环境包含 BFF 与 backoffice
-OIDC_DEFAULT_REDIRECT_URIS=["http://localhost:4000/api/bff/callback","http://localhost:3000/api/backoffice/callback"]
+OIDC_DEFAULT_REDIRECT_URIS=["http://localhost:4000/api/bff/callback","http://localhost:3000/api/auth/callback"]
+
+# Backoffice OIDC 配置
+BACKOFFICE_URL=http://localhost:3000
+BACKOFFICE_CLIENT_ID=backoffice
+BACKOFFICE_REDIRECT_URI=http://localhost:3000/api/auth/callback
 
 # Docker PostgreSQL配置（仅用于容器化部署）
 # PostgreSQL根用户名
