--- a/infra/idl/package.json
+++ b/infra/idl/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "gen:ts": "tsx ./cli/index.ts gen --ts",
     "gen:js": "tsx ./cli/index.ts gen --js",
@@ -20,6 +20,11 @@
     "src/v1"
   ],
   "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./backoffice": {
       "import": "./dist/esm/backoffice.js",
       "require": "./dist/backoffice.js",
