--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -12,34 +12,29 @@
   },
   "dependencies": {
     "@csisp/utils": "workspace:*",
-    "@nestjs/common": "^10.4.0",
-    "@nestjs/core": "^10.4.0",
-    "@nestjs/mongoose": "^11.0.4",
-    "@nestjs/platform-express": "^10.4.0",
-    "@nestjs/sequelize": "^10.0.0",
-    "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.2",
-    "pino": "^9.3.0",
-    "pino-pretty": "^11.2.2",
-    "redis": "^4.6.7",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "sequelize": "^6.35.0",
-    "sequelize-typescript": "^2.1.6"
+    "@nestjs/common": "catalog:node",
+    "@nestjs/core": "catalog:node",
+    "@nestjs/mongoose": "catalog:node",
+    "@nestjs/platform-express": "catalog:node",
+    "@nestjs/sequelize": "catalog:node",
+    "bcrypt": "catalog:node",
+    "class-transformer": "catalog:node",
+    "class-validator": "catalog:node",
+    "dotenv": "catalog:",
+    "jsonwebtoken": "catalog:node",
+    "mongoose": "catalog:node",
+    "pino": "catalog:",
+    "pino-pretty": "catalog:",
+    "redis": "catalog:node",
+    "reflect-metadata": "catalog:node",
+    "rxjs": "catalog:node",
+    "sequelize": "catalog:node",
+    "sequelize-typescript": "catalog:node"
   },
   "devDependencies": {
     "@csisp/infra-database": "workspace:*",
-    "@nestjs/cli": "^10.4.0",
-    "@types/bcrypt": "^6.0.0",
-    "@types/node": "^20.19.25",
-    "@types/pg": "^8.16.0",
-    "esbuild": "^0.19.0",
-    "nodemon": "^3.0.0",
-    "pg": "^8.11.3",
-    "tsx": "^4.0.0"
+    "@nestjs/cli": "catalog:node",
+    "@types/bcrypt": "catalog:dev",
+    "@types/node": "catalog:dev"
   }
 }
