--- a/apps/frontend-portal/package.json
+++ b/apps/frontend-portal/package.json
@@ -11,20 +11,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "vue": "^3.5.24",
-    "pinia": "^2.1.7",
-    "vue-router": "^4.3.0",
-    "axios": "^1.6.0",
-    "naive-ui": "^2.38.1",
-    "echarts": "^5.5.0",
-    "vue-echarts": "^6.6.1",
+    "vue": "catalog:frontend",
+    "pinia": "catalog:frontend",
+    "vue-router": "catalog:frontend",
+    "axios": "catalog:frontend",
+    "naive-ui": "catalog:frontend",
+    "echarts": "catalog:frontend",
+    "vue-echarts": "catalog:frontend",
     "@csisp/types": "workspace:*"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "vite": "5.4.8",
-    "vue-tsc": "^3.1.3",
-    "sass": "^1.69.5"
+    "@vitejs/plugin-vue": "catalog:frontend",
+    "@vue/tsconfig": "catalog:dev",
+    "vite": "catalog:frontend",
+    "vue-tsc": "catalog:dev",
+    "sass": "catalog:frontend"
   }
 }
