--- a/apps/idp/server/package.json
+++ b/apps/idp/server/package.json
@@ -17,33 +17,33 @@
     "@alicloud/openapi-util": "^0.2.1",
     "@alicloud/tea-util": "^1.4.11",
     "@csisp/rpc": "workspace:*",
-    "@nestjs/common": "^10.4.0",
-    "@nestjs/core": "^10.4.0",
-    "@nestjs/platform-express": "^10.4.0",
-    "@nestjs/sequelize": "^10.0.0",
+    "@csisp/utils": "workspace:*",
+    "@nestjs/common": "catalog:node",
+    "@nestjs/core": "catalog:node",
+    "@nestjs/platform-express": "catalog:node",
+    "@nestjs/sequelize": "catalog:node",
     "@nestjs/serve-static": "^4.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "pino": "^9.3.0",
-    "pino-pretty": "^11.2.2",
-    "redis": "^4.6.13",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "sequelize": "^6.35.0",
-    "sequelize-typescript": "^2.1.6"
+    "class-transformer": "catalog:node",
+    "class-validator": "catalog:node",
+    "cookie-parser": "catalog:node",
+    "dotenv": "catalog:",
+    "pg": "catalog:node",
+    "pg-hstore": "catalog:node",
+    "pino": "catalog:",
+    "redis": "catalog:node",
+    "reflect-metadata": "catalog:node",
+    "rxjs": "catalog:node",
+    "sequelize": "catalog:node",
+    "sequelize-typescript": "catalog:node"
   },
   "devDependencies": {
-    "@csisp/utils": "workspace:*",
     "@csisp/infra-database": "workspace:*",
-    "@nestjs/cli": "^10.4.0",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.19.25",
-    "nodemon": "^3.0.0",
-    "tsx": "^4.0.0"
+    "@nestjs/cli": "catalog:node",
+    "@types/cookie-parser": "catalog:dev",
+    "@types/express": "catalog:dev",
+    "@types/node": "catalog:dev",
+    "nodemon": "catalog:dev",
+    "pino-pretty": "catalog:",
+    "tsx": "catalog:dev"
   }
 }
