--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,18 +1,91 @@
 packages:
-  # 应用层 - 可独立部署的应用
   - 'apps/*'
   - 'apps/idp/client'
   - 'apps/idp/server'
   - 'infra/*'
-
-  # 共享包层 - 可复用的代码模块
   - 'packages/*'
-
-  # 工具配置层 - 开发工具和配置
-  - 'tooling'
-
-  # 文档层 - 项目文档和指南
   - 'docs'
-
-  # 测试层 - 测试相关文件
   - 'tests'
+
+# 默认 Catalog
+catalog:
+  typescript: ^5.9.3
+  dotenv: ^16.4.5
+  pino: ^10.3.1
+  pino-pretty: ^13.1.3
+
+# 命名 Catalogs
+catalogs:
+  # Node Catalog - Node.js 后端项目共享
+  # 适用于：backend-integrated, bff, backoffice, idp/server
+  node:
+    '@nestjs/common': ^10.4.22
+    '@nestjs/core': ^10.4.22
+    '@nestjs/platform-express': ^10.4.0
+    '@nestjs/sequelize': ^10.0.0
+    '@nestjs/cli': ^10.4.9
+    sequelize: ^6.35.0
+    sequelize-typescript: ^2.1.6
+    pg: ^8.11.3
+    'pg-hstore': ^2.3.4
+    mongodb: ^6.8.0
+    mongoose: ^9.0.2
+    '@nestjs/mongoose': ^11.0.4
+    redis: ^4.6.13
+    ioredis: ^5.3.2
+    jsonwebtoken: ^9.0.2
+    bcrypt: ^6.0.0
+    'class-validator': ^0.14.0
+    'class-transformer': ^0.5.1
+    rxjs: ^7.8.1
+    'reflect-metadata': ^0.2.2
+    '@koa/router': ^14.0.0
+    koa: ^3.1.1
+    'koa-bodyparser': ^4.4.1
+    undici: ^6.19.8
+    zod: ^3.23.8
+    dayjs: ^1.11.13
+    'cookie-parser': ^1.4.6
+
+  # Frontend Catalog - 浏览器前端项目共享
+  # 适用于：frontend-admin, frontend-portal, idp/client
+  frontend:
+    vue: ^3.5.24
+    pinia: ^2.1.7
+    'vue-router': ^4.3.0
+    'vue-echarts': ^6.6.1
+    react: ^18.2.0
+    'react-dom': ^18.2.0
+    'react-router-dom': ^7.13.0
+    'naive-ui': ^2.38.1
+    antd: ^5.18.4
+    '@ant-design/icons': ^5.5.1
+    vite: ^5.4.8
+    '@vitejs/plugin-vue': ^5.0.0
+    '@vitejs/plugin-react': ^4.2.1
+    sass: ^1.69.5
+    axios: ^1.6.0
+    echarts: ^5.5.0
+    'react-hook-form': ^7.56.3
+    '@hookform/resolvers': ^3.10.0
+    zod: ^3.25.76
+    lucide-react: ^0.563.0
+    '@vicons/ionicons5': ^0.13.0
+
+  # Dev Catalog - 开发工具共享
+  # 适用于：所有项目的 devDependencies
+  dev:
+    esbuild: ^0.19.0
+    tsx: ^4.0.0
+    nodemon: ^3.0.0
+    '@types/node': ^18.19.0
+    '@types/pg': ^8.16.0
+    '@types/bcrypt': ^6.0.0
+    '@types/react': ^18.2.67
+    '@types/react-dom': ^18.2.19
+    '@types/koa': ^3.0.1
+    '@types/koa-bodyparser': ^4.3.13
+    '@types/cookie-parser': ^1.4.10
+    '@types/express': ^4.17.21
+    '@vue/tsconfig': ^0.8.1
+    'vue-tsc': ^3.1.3
