feat(auth): 新增认证模块并重构相关功能
refactor(rpc): 重构RPC模块支持Thrift协议

refactor(idp): 重构IDP服务端支持多协议RPC

refactor(backoffice): 迁移认证逻辑到新模块

--- a/.env.example
+++ b/.env.example
@@ -72,6 +72,8 @@ BFF_PORT=4000
 OIDC_KEK_SECRET=dev-kek-do-not-use
 # IDP 基础 URL（用于 issuer / discovery）
 IDP_BASE_URL=http://localhost:4001/api/idp
+# IDP Thrift RPC URL（用于服务端间通信）
+IDP_THRIFT_URL=http://localhost:4001/thrift/idp
 # 默认客户端 ID（BFF）
 OIDC_DEFAULT_CLIENT_ID=csisp-bff
 # 默认回调地址（数组 JSON 字符串）：开发环境包含 BFF 与 backoffice
