--- a/apps/idp/server/package.json
+++ b/apps/idp/server/package.json
@@ -16,7 +16,11 @@
     "@alicloud/openapi-client": "^0.4.15",
     "@alicloud/openapi-util": "^0.2.1",
     "@alicloud/tea-util": "^1.4.11",
+    "@creditkarma/thrift-server-core": "^1.0.4",
+    "@creditkarma/thrift-server-express": "1.0.4",
+    "@creditkarma/thrift-client": "1.0.4",
     "@csisp/rpc": "workspace:*",
+    "@csisp/auth": "workspace:*",
     "@csisp/utils": "workspace:*",
     "@nestjs/common": "catalog:node",
     "@nestjs/core": "catalog:node",
