--- a/apps/backoffice/package.json
+++ b/apps/backoffice/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "catalog:frontend",
     "@csisp/idl": "workspace:*",
     "@csisp/rpc": "workspace:*",
+    "@csisp/auth": "workspace:*",
     "@csisp/utils": "workspace:*",
     "antd": "catalog:frontend",
     "dayjs": "catalog:node",
