--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -3,27 +3,47 @@
   "version": "1.0.0",
   "type": "commonjs",
   "main": "./dist/index.js",
-  "types": "./src/index.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/esm/index.d.ts"
+      "import": "./dist/esm/core.js",
+      "require": "./dist/core.js",
+      "types": "./dist/core.d.ts"
     },
     "./core": {
       "import": "./dist/esm/core.js",
       "require": "./dist/core.js",
-      "types": "./dist/esm/core.d.ts"
+      "types": "./dist/core.d.ts"
+    },
+    "./constants": {
+      "import": "./dist/esm/constants.js",
+      "require": "./dist/constants.js",
+      "types": "./dist/constants.d.ts"
     },
     "./client-fetch": {
       "import": "./dist/esm/client-fetch.js",
       "require": "./dist/client-fetch.js",
-      "types": "./dist/esm/client-fetch.d.ts"
+      "types": "./dist/client-fetch.d.ts"
     },
     "./server-nest": {
       "import": "./dist/esm/server-nest.js",
       "require": "./dist/server-nest.js",
-      "types": "./dist/esm/server-nest.d.ts"
+      "types": "./dist/server-nest.d.ts"
+    },
+    "./server-node": {
+      "import": "./dist/esm/server-node.js",
+      "require": "./dist/server-node.js",
+      "types": "./dist/server-node.d.ts"
+    },
+    "./thrift-client": {
+      "import": "./dist/esm/thrift-client.js",
+      "require": "./dist/thrift-client.js",
+      "types": "./dist/thrift-client.d.ts"
+    },
+    "./thrift-server": {
+      "import": "./dist/esm/thrift-server.js",
+      "require": "./dist/thrift-server.js",
+      "types": "./dist/thrift-server.d.ts"
     }
   },
   "files": [
@@ -33,6 +53,14 @@
     "build": "tsc -p tsconfig.json && tsc -p tsconfig.esm.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.22"
+    "@creditkarma/thrift-server-core": "^1.0.4",
+    "@creditkarma/thrift-server-express": "1.0.4",
+    "@creditkarma/thrift-client": "1.0.4",
+    "@nestjs/common": "^10.4.22",
+    "@nestjs/core": "^10.4.22",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
