--- a/packages/rpc/tsconfig.esm.json
+++ b/packages/rpc/tsconfig.esm.json
@@ -10,7 +10,9 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "noEmit": false
+    "noEmit": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
