feat(idp): 重构OIDC和Auth模块，引入路径别名和工具类
refactor: 使用路径别名替换相对路径导入
feat(utils): 新增SessionIssuer和TicketIssuer工具类
feat(types): 添加Redis键名前缀枚举
feat(interceptors): 实现JSON-RPC拦截器自动包装响应
feat(policy): 新增OIDC策略辅助工具
feat(signer): 实现OIDC令牌签发工具
refactor(controllers): 重构OIDC和Auth控制器为声明式路由
refactor(services): 重构OIDC和Auth服务逻辑
docs: 更新项目规则和开发SOP文档
chore: 更新pnpm版本和依赖

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,12 @@ JWT_EXPIRES_IN=1h
 # JWT刷新令牌过期时间
 JWT_REFRESH_EXPIRES_IN=7d
 
+# 会话配置
+# 短期会话 TTL (秒)，用于多因子校验等临时状态
+IDP_SESSION_TTL_SHORT=300
+# 长期会话 TTL (秒)，用于正常登录后的 SSO 会话
+IDP_SESSION_TTL_LONG=3600
+
 # 服务端口与URL配置
 # 集成后端服务端口
 BACKEND_INTEGRATED_PORT=3100
