feat(auth): 重构认证模块，实现统一OIDC集成方案
- 新增react组件库支持前端认证流程
- 重构服务端中间件与NestJS集成
- 迁移常量至core模块并更新相关引用
- 实现完整的OIDC流程与PKCE安全机制
- 提供文档与SOP指导接入流程
- 移除各应用中的JWT直接依赖，改用统一SDK

--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -11,6 +11,7 @@
     "db:types": "pnpm -F @csisp/infra-database types:build"
   },
   "dependencies": {
+    "@csisp/auth": "workspace:*",
     "@csisp/utils": "workspace:*",
     "@nestjs/common": "catalog:node",
     "@nestjs/core": "catalog:node",
@@ -21,7 +22,6 @@
     "class-transformer": "catalog:node",
     "class-validator": "catalog:node",
     "dotenv": "catalog:",
-    "jsonwebtoken": "catalog:node",
     "mongoose": "catalog:node",
     "pino": "catalog:",
     "pino-pretty": "catalog:",
