--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -10,8 +10,11 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "noEmit": false
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noEmit": false,
+    "jsx": "react-jsx"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
