refactor(idl): 统一字段命名从next改为nextSteps
修复oidc服务中JWK的use字段重命名为keyUse
移除i18n模块中废弃的IMPORT和EXPORT枚举及相关别名
更新初始化脚本以支持Windows环境并调整Node.js和pnpm版本要求
优化数据库初始化脚本以简化流程并修复路径问题

--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -10,7 +10,7 @@
     "db:seed": "tsx src/seed/index.ts",
     "db:init:mac": "bash scripts/init_mac.sh",
     "db:init:linux": "bash scripts/init_linux.sh",
-    "db:init:win": "scripts/init_windows.bat",
+    "db:init:win": ".\\scripts\\init_windows.bat",
     "db:init": "bash scripts/init_mac.sh",
     "atlas:diff": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas schema diff --config file://infra/database/atlas.hcl --env local --from env://url --to file://infra/database/src/schema/",
     "atlas:migrate:diff": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas migrate diff --config file://infra/database/atlas.hcl --env local",
