refactor(env): 重构环境变量加载机制并添加检查工具
- 移除各处的 loadRootEnv 调用，改为通过 dotenv-cli 统一加载
- 添加 dotenv-expand 支持环境变量扩展
- 新增 check:env 脚本检查环境变量同步状态
- 更新 turbo.json 配置确保构建前检查环境变量
- 改进 .env.example 文件格式和变量引用

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "format": "pnpm prettier --write . && eslint . --fix && stylelint '**/*.{css,scss,vue}' --fix",
     "lint:staged": "lint-staged",
     "prepare": "husky",
-    "dev:infra": "turbo run db:init --filter=@csisp/infra-database && turbo run idl:gen --filter=@csisp/idl",
-    "dev:infra:win": "pnpm -F @csisp/infra-database db:init:win && pnpm -F @csisp/idl idl:gen",
-    "dev:backend-integrated": "turbo run db:types --filter=@csisp/backend-integrated && turbo run dev --filter=@csisp/backend-integrated",
-    "dev:backoffice": "turbo run db:types --filter=@csisp/backoffice && turbo run dev --filter=@csisp/backoffice",
-    "dev:idp": "turbo run dev --filter=@csisp/idp-client --filter=@csisp/idp-server",
-    "dev:bff": "turbo run dev --filter=@csisp/bff",
-    "dev:admin": "turbo run dev --filter=@csisp/frontend-admin",
-    "dev:portal": "turbo run dev --filter=@csisp/frontend-portal",
+    "dev:infra": "pnpm check:env && dotenv -- turbo run db:init --filter=@csisp/infra-database && dotenv -- turbo run idl:gen --filter=@csisp/idl",
+    "dev:infra:win": "pnpm check:env && pnpm -F @csisp/infra-database db:init:win && pnpm -F @csisp/idl idl:gen",
+    "dev:backend-integrated": "dotenv -- turbo run db:types --filter=@csisp/backend-integrated && dotenv -- turbo run dev --filter=@csisp/backend-integrated",
+    "dev:backoffice": "dotenv -- turbo run db:types --filter=@csisp/backoffice && dotenv -- turbo run dev --filter=@csisp/backoffice",
+    "dev:idp": "dotenv -- turbo run dev --filter=@csisp/idp-client --filter=@csisp/idp-server",
+    "dev:bff": "dotenv -- turbo run dev --filter=@csisp/bff",
+    "dev:admin": "dotenv -- turbo run dev --filter=@csisp/frontend-admin",
+    "dev:portal": "dotenv -- turbo run dev --filter=@csisp/frontend-portal",
+    "check:env": "tsx infra/scripts/check-env.ts",
     "build": "turbo build"
   },
   "packageManager": "pnpm@10.29.3+sha256.a74f4dbd3f5a7ca874d004135271f0b697b683bf1fd2fc2133961161cd25b29c",
@@ -36,16 +37,20 @@
     ]
   },
   "devDependencies": {
+    "@csisp/utils": "workspace:*",
     "@eslint/js": "^9.39.1",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/glob": "^9.0.0",
     "@types/node": "^18.19.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.1",
+    "glob": "^13.0.3",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
@@ -56,6 +61,7 @@
     "stylelint-config-recommended-vue": "^1.6.1",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-config-standard-scss": "^16.0.0",
+    "tsx": "^4.21.0",
     "turbo": "^2.7.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4"
