--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
-# 仅用于本地开发的环境变量示例文件
-# 复制为 .env 后按需修改；生产/CI 环境请通过安全渠道注入变量，不要提交真实敏感值
-
 # 数据库配置
 # 数据库主机地址
 DB_HOST=localhost
 # 数据库端口号
-DB_PORT=5433
+DB_PORT=5434
 # 数据库名称
 DB_NAME=csisp
 # 数据库用户名
@@ -13,7 +10,7 @@ DB_USER=admin
 # 数据库密码
 DB_PASSWORD=replace-me
 # 完整数据库连接URL
-DATABASE_URL=postgres://admin:replace-me@localhost:5433/csisp
+DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # Redis配置
 # Redis主机地址
@@ -69,17 +66,23 @@ IDP_SESSION_TTL_LONG=3600
 # 集成后端服务端口
 BACKEND_INTEGRATED_PORT=3100
 # 集成后端服务URL
-BACKEND_INTEGRATED_URL=http://localhost:3100
+BACKEND_INTEGRATED_URL=http://localhost:${BACKEND_INTEGRATED_PORT}
 # 前端后端（BFF）服务端口
 BFF_PORT=4000
+# 前端访问 BFF 的共享 URL
+CSISP_BFF_URL=http://localhost:${BFF_PORT}
 
 # OIDC / OAuth 配置（开发示例）
 # OIDC 私钥加密主密钥（开发占位，生产需安全注入）
 OIDC_KEK_SECRET=dev-kek-do-not-use
+# IDP 端口
+IDP_PORT=4001
 # IDP 基础 URL（用于 issuer / discovery）
-IDP_BASE_URL=http://localhost:4001/api/idp
+IDP_BASE_URL=http://localhost:${IDP_PORT}/api/idp
+# 前端访问 IDP 的共享 URL
+CSISP_IDP_URL=http://localhost:${IDP_PORT}
 # IDP Thrift RPC URL（用于服务端间通信）
-IDP_THRIFT_URL=http://localhost:4001/thrift/idp
+IDP_THRIFT_URL=http://localhost:${IDP_PORT}/thrift/idp
 # 默认客户端 ID（BFF）
 OIDC_DEFAULT_CLIENT_ID=csisp-bff
 # 默认回调地址（数组 JSON 字符串）：开发环境包含 BFF 与 backoffice
