feat: 迁移环境变量管理至Infisical并重构相关配置
refactor: 移除dotenv依赖，使用requireEnv统一校验环境变量
refactor(redis): 移除REDIS_ENABLED配置，改为必需依赖
refactor(database): 统一使用DATABASE_URL连接数据库
docs: 添加Infisical接入指南和配置文档
chore: 移除.env文件和check-env脚本

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -16,23 +16,22 @@
   },
   "dependencies": {
     "@csisp/auth": "workspace:*",
-    "@csisp/utils": "workspace:*",
     "@csisp/types": "workspace:*",
-    "koa": "catalog:node",
+    "@csisp/utils": "workspace:*",
     "@koa/router": "catalog:node",
+    "koa": "catalog:node",
     "koa-bodyparser": "catalog:node",
-    "undici": "catalog:node",
-    "zod": "catalog:node",
-    "dotenv": "catalog:",
     "pino": "catalog:",
-    "redis": "catalog:node"
+    "redis": "catalog:node",
+    "undici": "catalog:node",
+    "zod": "catalog:node"
   },
   "devDependencies": {
+    "@types/koa": "catalog:dev",
+    "@types/koa-bodyparser": "catalog:dev",
     "esbuild": "catalog:dev",
     "nodemon": "catalog:dev",
     "pino-pretty": "catalog:",
-    "tsx": "catalog:dev",
-    "@types/koa": "catalog:dev",
-    "@types/koa-bodyparser": "catalog:dev"
+    "tsx": "catalog:dev"
   }
 }
