--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -12,16 +12,15 @@
     "db:init:linux": "bash scripts/init_linux.sh",
     "db:init:win": ".\\scripts\\init_windows.bat",
     "db:init": "bash scripts/init_mac.sh",
-    "atlas:diff": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas schema diff --config file://infra/database/atlas.hcl --env local --from env://url --to file://infra/database/src/schema/",
-    "atlas:migrate:diff": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas migrate diff --config file://infra/database/atlas.hcl --env local",
-    "atlas:migrate:apply": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas migrate apply --config file://infra/database/atlas.hcl --env local",
-    "atlas:migrate:status": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas migrate status --config file://infra/database/atlas.hcl --env local",
-    "atlas:inspect": "docker compose -f docker-compose.db.yml --env-file ../../.env run --rm atlas schema inspect --config file://infra/database/atlas.hcl --env local",
+    "atlas:diff": "docker compose -f docker-compose.db.yml run --rm atlas schema diff --config file://infra/database/atlas.hcl --env local --from env://url --to file://infra/database/src/schema/",
+    "atlas:migrate:diff": "docker compose -f docker-compose.db.yml run --rm atlas migrate diff --config file://infra/database/atlas.hcl --env local",
+    "atlas:migrate:apply": "docker compose -f docker-compose.db.yml run --rm atlas migrate apply --config file://infra/database/atlas.hcl --env local",
+    "atlas:migrate:status": "docker compose -f docker-compose.db.yml run --rm atlas migrate status --config file://infra/database/atlas.hcl --env local",
+    "atlas:inspect": "docker compose -f docker-compose.db.yml run --rm atlas schema inspect --config file://infra/database/atlas.hcl --env local",
     "types:build": "tsx src/cli/gen-types.ts"
   },
   "dependencies": {
     "@csisp/utils": "workspace:*",
-    "dotenv": "catalog:",
     "mongodb": "catalog:node",
     "pg": "catalog:node",
     "pg-hstore": "catalog:node",
