--- a/infra/database/docker-compose.db.yml
+++ b/infra/database/docker-compose.db.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '${DB_PORT:-5433}:5432'
+      - '${DB_PORT}:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -31,7 +31,7 @@ services:
   redis:
     image: redis:7-alpine
     ports:
-      - '${REDIS_PORT:-6379}:6379'
+      - '${REDIS_PORT}:6379'
     volumes:
       - redis_data:/data
     healthcheck:
