feat: 重构配置管理并统一环境变量处理
refactor: 将各子项目环境变量集中到src/config管理
feat(config): 新增@csisp/config包提供环境变量解析工具
style: 修复BaseTable组件类型提示问题
docs: 更新代码风格指南文档
chore: 更新pnpm-lock.yaml依赖

--- a/apps/backend-integrated/package.json
+++ b/apps/backend-integrated/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@csisp/auth": "workspace:*",
+    "@csisp/config": "workspace:*",
     "@csisp/utils": "workspace:*",
     "@nestjs/common": "catalog:node",
     "@nestjs/core": "catalog:node",
@@ -28,7 +29,8 @@
     "reflect-metadata": "catalog:node",
     "rxjs": "catalog:node",
     "sequelize": "catalog:node",
-    "sequelize-typescript": "catalog:node"
+    "sequelize-typescript": "catalog:node",
+    "zod": "catalog:node"
   },
   "devDependencies": {
     "@csisp/infra-database": "workspace:*",
