--- a/apps/idp/server/tsconfig.json
+++ b/apps/idp/server/tsconfig.json
@@ -20,7 +20,9 @@
       "@modules/*": ["src/modules/*"],
       "@common/*": ["src/common/*"],
       "@idp-types/*": ["src/types/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@config": ["src/config/index.ts"],
+      "@config/*": ["src/config/*"]
     }
   },
   "include": ["src/**/*.ts"],
