--- a/infra/infisical/docker-compose.yml
+++ b/infra/infisical/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
-      - infisical_pg_data:/var/lib/postgresql/data
+      - ./.data/postgres:/var/lib/postgresql/data
     networks:
       - infisical_network
     healthcheck:
@@ -19,7 +19,7 @@ services:
     image: redis:7-alpine
     command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
-      - infisical_redis_data:/data
+      - ./.data/redis:/data
     networks:
       - infisical_network
     healthcheck:
@@ -50,7 +50,3 @@ services:
 networks:
   infisical_network:
     driver: bridge
-
-volumes:
-  infisical_pg_data:
-  infisical_redis_data:
