refactor(idl): 移除 Thrift JS 生成支持并简化配置
refactor(database): 更新数据库配置和初始化脚本
- 添加生产环境数据库迁移和初始化脚本

fix(infisical): 更新服务配置和文档
- 限制 Infisical 服务仅本地访问
- 更新文档中的服务地址和端口

docs: 更新环境搭建文档
- 移除 Thrift 安装说明
- 更新 IDL 生成工具说明

--- a/infra/database/package.json
+++ b/infra/database/package.json
@@ -11,7 +11,9 @@
     "db:init:mac": "bash scripts/init_mac.sh",
     "db:init:linux": "bash scripts/init_linux.sh",
     "db:init:win": ".\\scripts\\init_windows.bat",
-    "db:init": "bash scripts/init_mac.sh",
+    "dev:db:init": "bash scripts/init_mac.sh",
+    "prod:db:init": "bash scripts/init_server.sh",
+    "prod:db:migrate": "bash scripts/migrate_prod.sh",
     "atlas:diff": "docker compose -f docker-compose.db.yml run --rm atlas schema diff --config file://infra/database/atlas.hcl --env local --from env://url --to file://infra/database/src/schema/",
     "atlas:migrate:diff": "docker compose -f docker-compose.db.yml run --rm atlas migrate diff --config file://infra/database/atlas.hcl --env local",
     "atlas:migrate:apply": "docker compose -f docker-compose.db.yml run --rm atlas migrate apply --config file://infra/database/atlas.hcl --env local",
