--- a/infra/database/docker-compose.db.yml
+++ b/infra/database/docker-compose.db.yml
@@ -30,12 +30,13 @@ services:
 
   redis:
     image: redis:7-alpine
+    command: ['redis-server', '--requirepass', '${REDIS_PASSWORD}']
     ports:
       - '${REDIS_PORT}:6379'
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
+      test: ['CMD', 'redis-cli', '-a', '${REDIS_PASSWORD}', 'ping']
       interval: 30s
       timeout: 10s
       retries: 3
@@ -43,12 +44,16 @@ services:
 
   mongo:
     image: mongo:6
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     ports:
-      - '27017:27017'
+      - '${MONGO_PORT}:27017'
     volumes:
       - mongo_data:/data/db
     healthcheck:
-      test: ['CMD', 'mongosh', '--eval', 'db.runCommand({ ping: 1 })']
+      test: ['CMD', 'mongosh', '--username', '${MONGO_INITDB_ROOT_USERNAME}', '--password', '${MONGO_INITDB_ROOT_PASSWORD}', '--eval', 'db.runCommand({ ping: 1 })']
       interval: 30s
       timeout: 10s
       retries: 3
