ci(workflow): 优化数据库CI工作流中pnpm安装命令
仅安装@csisp/infra-database相关依赖以提高效率

--- a/.github/workflows/database-ci.yml
+++ b/.github/workflows/database-ci.yml
@@ -36,6 +36,6 @@ jobs:
             git fetch --all
             git reset --hard origin/\${DB_DEPLOY_BRANCH:-main}
             pnpm -v
-            pnpm install --frozen-lockfile
+            pnpm i -F @csisp/infra-database --frozen-lockfile
             pnpm -F @csisp/infra-database prod:db:init
           "
